fix: :bug: fix loading not showing

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@
 /* loading spinner */
 .socket {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: 1000;
   overflow-y: hidden;
   background-color: #000;
